Fix - blockquote in dark mode

--- a/src/sass/components/message/messageView.scss
+++ b/src/sass/components/message/messageView.scss
@@ -401,7 +401,8 @@
                     display: block;
                 }
                 blockquote.protonmail_quote {
-                    position: relative
+                    position: relative;
+                    color: $pm-global-grey;
                 }
             }
         }
